--- a/NonProfitOrganizationFinder/NonProfitOrganizationFinder/Base.lproj/Main.storyboard
+++ b/NonProfitOrganizationFinder/NonProfitOrganizationFinder/Base.lproj/Main.storyboard
@@ -14,7 +14,7 @@
             <objects>
                 <navigationController id="NC1-q1-8ua" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Map" image="map_marker.png" id="e8Y-qH-nfc"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="DSN-Hx-fRH">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="DSN-Hx-fRH">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -26,7 +26,7 @@
             </objects>
             <point key="canvasLocation" x="1014" y="-313"/>
         </scene>
-        <!--Map Controller-->
+        <!--Reach Out-->
         <scene sceneID="mCB-JC-VEY">
             <objects>
                 <viewController id="djw-mj-o3K" customClass="MapController" customModule="NonProfitOrganizationFinder" customModuleProvider="target" sceneMemberID="viewController">
@@ -50,7 +50,8 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="NI3-vW-Rmu">
+                    <navigationItem key="navigationItem" title="Reach Out" id="NI3-vW-Rmu" userLabel="Map">
+                        <barButtonItem key="backBarButtonItem" title="Map" id="Y2h-am-Fd0"/>
                         <barButtonItem key="leftBarButtonItem" style="plain" id="2NQ-v8-opT">
                             <switch key="customView" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" id="cjw-cW-Xgj">
                                 <rect key="frame" x="16" y="6" width="51" height="31"/>
@@ -164,7 +165,7 @@
             <objects>
                 <navigationController id="SoU-jC-ilw" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Favorites" image="star.png" id="1Qr-Tw-zO1"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="6UB-V5-WrS">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="6UB-V5-WrS">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -241,6 +242,9 @@
                                 <rect key="frame" x="275" y="7" width="84" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="settings.png"/>
+                                <connections>
+                                    <segue destination="gct-G1-aHo" kind="push" id="0XU-83-YRE"/>
+                                </connections>
                             </button>
                         </barButtonItem>
                     </navigationItem>
@@ -300,7 +304,7 @@
         <!--List-->
         <scene sceneID="Vbi-xB-daG">
             <objects>
-                <viewController id="CE3-32-mFo" userLabel="List" customClass="MapController" customModule="NonProfitOrganizationFinder" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ListVC" id="CE3-32-mFo" userLabel="List" customClass="ListViewController" customModule="NonProfitOrganizationFinder" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="3HZ-Jy-d8v"/>
                         <viewControllerLayoutGuide type="bottom" id="0iy-mU-5eS"/>
@@ -314,14 +318,14 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="oa8-Of-BIG">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="myCell" id="oa8-Of-BIG" userLabel="myCell" customClass="MyTableViewCell" customModule="NonProfitOrganizationFinder" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="oa8-Of-BIG" id="W5e-5E-FuQ">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4i8-f3-NM2">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" restorationIdentifier="myCell" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4i8-f3-NM2">
                                                     <rect key="frame" x="35" y="0.0" width="340" height="44"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -330,6 +334,9 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="label" destination="4i8-f3-NM2" id="0BG-g9-Z4Y"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -345,6 +352,9 @@
                                 <rect key="frame" x="276" y="28" width="83" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="settings.png"/>
+                                <connections>
+                                    <segue destination="gct-G1-aHo" kind="push" id="Izy-Hd-sh3"/>
+                                </connections>
                             </button>
                             <searchBar contentMode="redraw" fixedFrame="YES" placeholder="Search by City" translatesAutoresizingMaskIntoConstraints="NO" id="gA3-h4-3Rl">
                                 <rect key="frame" x="0.0" y="65" width="375" height="44"/>
@@ -355,10 +365,13 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="List View" id="tiR-ne-LNH"/>
+                    <connections>
+                        <outlet property="tableView" destination="qPg-tc-Jr9" id="L3D-nV-fgf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ypb-Vg-98C" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2916" y="-530"/>
+            <point key="canvasLocation" x="2905" y="-539"/>
         </scene>
     </scenes>
     <resources>
@@ -366,4 +379,7 @@
         <image name="settings.png" width="30" height="30"/>
         <image name="star.png" width="30" height="30"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="Izy-Hd-sh3"/>
+    </inferredMetricsTieBreakers>
 </document>
