--- a/NonProfitOrganizationFinder/NonProfitOrganizationFinder/Base.lproj/Main.storyboard
+++ b/NonProfitOrganizationFinder/NonProfitOrganizationFinder/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="UO0-3O-LTC">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G1036" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="UO0-3O-LTC">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -14,7 +14,7 @@
             <objects>
                 <navigationController id="NC1-q1-8ua" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Map" image="map_marker.png" id="e8Y-qH-nfc"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="DSN-Hx-fRH">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="DSN-Hx-fRH">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -165,7 +165,7 @@
             <objects>
                 <navigationController id="SoU-jC-ilw" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Favorites" image="star.png" id="1Qr-Tw-zO1"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="6UB-V5-WrS">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="6UB-V5-WrS">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -356,7 +356,7 @@
                                     <segue destination="gct-G1-aHo" kind="push" id="Izy-Hd-sh3"/>
                                 </connections>
                             </button>
-                            <searchBar contentMode="redraw" fixedFrame="YES" placeholder="Search by City" translatesAutoresizingMaskIntoConstraints="NO" id="gA3-h4-3Rl">
+                            <searchBar contentMode="redraw" fixedFrame="YES" text="" placeholder="Search by City" translatesAutoresizingMaskIntoConstraints="NO" id="gA3-h4-3Rl">
                                 <rect key="frame" x="0.0" y="65" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -366,6 +366,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="List View" id="tiR-ne-LNH"/>
                     <connections>
+                        <outlet property="searchBar" destination="gA3-h4-3Rl" id="A42-Iy-TiG"/>
                         <outlet property="tableView" destination="qPg-tc-Jr9" id="L3D-nV-fgf"/>
                     </connections>
                 </viewController>
