--- a/NonProfitOrganizationFinder/NonProfitOrganizationFinder/Base.lproj/Main.storyboard
+++ b/NonProfitOrganizationFinder/NonProfitOrganizationFinder/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G1036" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="UO0-3O-LTC">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="UO0-3O-LTC">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -366,7 +366,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="List View" id="tiR-ne-LNH"/>
                     <connections>
-                        <outlet property="searchBar" destination="gA3-h4-3Rl" id="A42-Iy-TiG"/>
+                        <outlet property="searchBar" destination="gA3-h4-3Rl" id="tIz-W3-TWm"/>
                         <outlet property="tableView" destination="qPg-tc-Jr9" id="L3D-nV-fgf"/>
                     </connections>
                 </viewController>
