--- a/NonProfitOrganizationFinder/NonProfitOrganizationFinder/Base.lproj/Main.storyboard
+++ b/NonProfitOrganizationFinder/NonProfitOrganizationFinder/Base.lproj/Main.storyboard
@@ -380,6 +380,6 @@
         <image name="star.png" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Izy-Hd-sh3"/>
+        <segue reference="0XU-83-YRE"/>
     </inferredMetricsTieBreakers>
 </document>
