--- a/NonProfitOrganizationFinder/NonProfitOrganizationFinder/Base.lproj/Main.storyboard
+++ b/NonProfitOrganizationFinder/NonProfitOrganizationFinder/Base.lproj/Main.storyboard
@@ -213,7 +213,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="IDf-3O-Tzp">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="myCellFav" id="IDf-3O-Tzp">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="IDf-3O-Tzp" id="kRz-1U-xuW">
@@ -248,6 +248,9 @@
                             </button>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="nqL-WA-xNU" id="SeF-uZ-bre"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xuW-27-Z2r" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
