--- a/NonProfitOrganizationFinder/NonProfitOrganizationFinder/Base.lproj/Main.storyboard
+++ b/NonProfitOrganizationFinder/NonProfitOrganizationFinder/Base.lproj/Main.storyboard
@@ -140,7 +140,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="L9G-CE-iyt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3969" y="-661"/>
+            <point key="canvasLocation" x="3887" y="-313"/>
         </scene>
         <!--Web View Controller-->
         <scene sceneID="4cD-Jy-8Df">
@@ -158,7 +158,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fgm-Cr-JKp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5020" y="-671"/>
+            <point key="canvasLocation" x="4858" y="-313"/>
         </scene>
         <!--Favorites-->
         <scene sceneID="Ry8-Bx-Zv0">
@@ -299,7 +299,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1K6-r5-vLu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3784.8000000000002" y="157.87106446776613"/>
+            <point key="canvasLocation" x="2905" y="486"/>
         </scene>
         <!--List-->
         <scene sceneID="Vbi-xB-daG">
@@ -314,7 +314,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="qPg-tc-Jr9">
-                                <rect key="frame" x="0.0" y="109" width="375" height="558"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -326,7 +326,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" restorationIdentifier="myCell" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4i8-f3-NM2">
-                                                    <rect key="frame" x="35" y="0.0" width="340" height="44"/>
+                                                    <rect key="frame" x="17" y="0.0" width="358" height="44"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -372,7 +372,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ypb-Vg-98C" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2905" y="-539"/>
+            <point key="canvasLocation" x="2904.8000000000002" y="-313.49325337331339"/>
         </scene>
     </scenes>
     <resources>
@@ -381,6 +381,6 @@
         <image name="star.png" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="0XU-83-YRE"/>
+        <segue reference="Izy-Hd-sh3"/>
     </inferredMetricsTieBreakers>
 </document>
