--- a/NonProfitOrganizationFinder/NonProfitOrganizationFinder/Base.lproj/Main.storyboard
+++ b/NonProfitOrganizationFinder/NonProfitOrganizationFinder/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="UO0-3O-LTC">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G1036" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="UO0-3O-LTC">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -75,6 +75,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="mapView" destination="wFS-hx-HXx" id="zBd-WJ-i6m"/>
+                        <outlet property="searchBar" destination="BF0-T1-waE" id="0vQ-Xj-Ofs"/>
                         <outlet property="settingsButton" destination="1Ek-m3-HcO" id="7B8-Ut-PjR"/>
                         <outlet property="theSwitch" destination="cjw-cW-Xgj" id="QQ6-u5-kPT"/>
                     </connections>
@@ -381,6 +382,6 @@
         <image name="star.png" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Izy-Hd-sh3"/>
+        <segue reference="Bot-gg-vGq"/>
     </inferredMetricsTieBreakers>
 </document>
