listview: spinner, semi fix to indexing issue

--- a/NonProfitOrganizationFinder/NonProfitOrganizationFinder/Base.lproj/Main.storyboard
+++ b/NonProfitOrganizationFinder/NonProfitOrganizationFinder/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G1036" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="UO0-3O-LTC">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="UO0-3O-LTC">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -318,6 +318,10 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <activityIndicatorView key="tableFooterView" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" id="57J-Fi-yxd">
+                                    <rect key="frame" x="0.0" y="72" width="375" height="20"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                </activityIndicatorView>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="myCell" id="oa8-Of-BIG" userLabel="myCell" customClass="MyTableViewCell" customModule="NonProfitOrganizationFinder" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
@@ -368,6 +372,7 @@
                     <navigationItem key="navigationItem" title="List View" id="tiR-ne-LNH"/>
                     <connections>
                         <outlet property="searchBar" destination="gA3-h4-3Rl" id="tIz-W3-TWm"/>
+                        <outlet property="spinner" destination="57J-Fi-yxd" id="GGs-VM-Ega"/>
                         <outlet property="tableView" destination="qPg-tc-Jr9" id="L3D-nV-fgf"/>
                     </connections>
                 </viewController>
